# python-ci-example

./: LICENSE  README.md  pyproject.toml
.github/workflows/: autoformat.yml  autoformatting.yml  lint.yml  tests.yml
example/: main.py
tests/: test_example.py
